--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <title>Pokegotchi</title>
   <meta name="description" content="Pokegotchi">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="/assets/icon.png">
+  <link rel="icon" type="image/png" href="./assets/icon.png">
   <link rel="stylesheet" href="https://unpkg.com/bootstrap@5/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
   <div class="container-fluid text-center">
-    <img src="/assets/logo.png" class="logo">
+    <img src="./assets/logo.png" class="logo">
     <div id="poke-container"></div>
     <div id="btn-container">
       <button id="generate-pokemon" class="btn btn-light">Adopt a Pokemon</button>
