Added Icons for actions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="container-fluid text-center">
-    <img src="./assets/logo.png" class="logo">
+    <img src="./assets/logo.png" class="logo img-fluid">
     <div id="poke-container"></div>
     <div id="btn-container">
       <button id="generate-pokemon" class="btn btn-light">Adopt a Pokemon</button>
