--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Pokegotchi">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="./assets/icon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
   <link rel="stylesheet" href="https://unpkg.com/bootstrap@5/dist/css/bootstrap.css">
   <link rel="stylesheet" href="./styles.css">
 </head>
